--- a/_posts/2023-3-30-Ctrl.md
+++ b/_posts/2023-3-30-Ctrl.md
@@ -5,14 +5,18 @@ title: ctrl
 
 hi. i've been neglecting you. i'm sorry. i'm trying.
 
-### radio
+### // radio >
 
 i took the ameteur radio technician license and passed. i've been learning about the ameteur bands and the different services/modes offered. once i feel comfortable enough, i want to start playing around with the sdr dongle that i bought, but i'm also putting together a nice portable rig to start trying park/summit activations. i'll make sure to post the details of my rig once i have it all put together and tested.
 
-### site
+### // site >
 
-i know i haven't been paying attention to this blog at all. time to start giving it some love. i am working towards a nice minimal layout, but these fonts suck. hopefully i can get around to changing up the fonts soon.
+i know i haven't been paying attention to this blog at all. time to start giving it some love. i am working towards a nice minimal layout, but these fonts suck. hopefully i can get around to changing up the fonts soon. perhaps much sooner than you think.
 
-### rand()
+### // rand() >
 
 ![Senku](/images/dr-stone-anime.gif)
+
+### // life >
+
+seldom do i feel that the things i care about or have taken interest in are shared with my circle. i've tried to find some commonalities within my various friend groups, but it seems like everyone wants to be superficial about it and they don't really care much about the things that interest me. is it selfish of me? does it even really matter?
