update post, update style

--- a/_posts/2023-3-30-Ctrl.md
+++ b/_posts/2023-3-30-Ctrl.md
@@ -15,8 +15,30 @@ i know i haven't been paying attention to this blog at all. time to start giving
 
 ### // rand() >
 
+i've been putting off a large amount of work in lieu of fucking off and not getting shit done. i suppose this blog is a reflection of that, since it has been nearly a year since i put any work into it.
+
 ![Senku](/images/dr-stone-anime.gif)
 
-### // life >
+not really sure what else to do with this post since it is the first official one and haven't put much thought into what i wanted to say.
 
-seldom do i feel that the things i care about or have taken interest in are shared with my circle. i've tried to find some commonalities within my various friend groups, but it seems like everyone wants to be superficial about it and they don't really care much about the things that interest me. is it selfish of me? does it even really matter?
+### // destruct() >
+
+i suppose i should use this section for anything that i'm actively working on. at the moment, other than this blog, i'm only working on my man-portable radio operator rig. waiting on some coax cables and right angle connectors, as well as some digirig connectors to drop in so I can start running some tests.
+
+rig so far:
+
+- icom ic-706
+- armoloq tpa-706
+- digirig
+- eberlestock bandit pack
+- bioenno 12v lifepo battery pack
+
+the plan is to build out some random-wire, dipole antennas (maybe a single adjustable one) for 10 meters and lower, and use some 2m/70cm whips for 2 meter where possible. really curious to do some propagation testing on 10 meters and lower to see what is possible on those bands.
+
+so far i've only done some testing on local repeaters with my baofeng handheld and btech mobile station.
+
+### // eof >
+
+i'm still trying to figure out how i want to format these posts. i'm liking it so far, so we'll see if i just run with this. that's it for now.
+
+- an0malous_
