--- a/_posts/2024-4-18-rand(c0de).md
+++ b/_posts/2024-4-18-rand(c0de).md
@@ -8,7 +8,7 @@ SXMgaXQgcmVhbGx5IHJhbmRvbSB0aG91Z2g/
 
 ### // 180 minutes of c0de >
 
-like 100 days of code, but shorter... and eratic.
+like 100 days of code, but shorter... and erratic.
 
 i had, for the longest time, been slacking on coding just for the sake of coding. however, i've had to write some scripts and work to interface with apis as well as to handle other automation tasks, and that kinda has me wanting to start working on random projects. 
 
