new post, update categories, update posts

--- a/_posts/2024-8-18-update-004.md
+++ b/_posts/2024-8-18-update-004.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: update 004
-categories: hardware
+categories: updates
 ---
 
 Haven't been as active as I would like to be, but I intend on trying. Stuff has been a bit hectic with work and all, so I'm trying to work around all of the stuff that is leaving me drained so I can make time for personal projects and radio stuff.
