update blog categories

--- a/_posts/2024-4-2-ground.md
+++ b/_posts/2024-4-2-ground.md
@@ -13,3 +13,5 @@ i had already considered running updates on here, but never got around to doing 
 ### // eof >
 
 here's hoping i keep adding to this blog... oh, and don't forget to patch your shit.
+
+- an0malous
