--- a/_posts/2024-8-18-update-004.md
+++ b/_posts/2024-8-18-update-004.md
@@ -4,20 +4,20 @@ title: update 004
 categories: updates
 ---
 
-Haven't been as active as I would like to be, but I intend on trying. Stuff has been a bit hectic with work and all, so I'm trying to work around all of the stuff that is leaving me drained so I can make time for personal projects and radio stuff.
+haven't been as active as i would like to be, but i intend on trying. stuff has been a bit hectic with work and all, so i'm trying to work around all of the stuff that is leaving me drained so i can make time for personal projects and radio stuff.
 
 ### // update 004 >
 
-I recently decided it was time to get an upgrade. I think I have done enough experimenting with the cheap stuff and I figured it is time to make an investment into some equipment that I will actually use out in the field. While I don't mind having some Baofengs lying around in case I need them, I want something that is going to last. I ended up buying a Yaesu VX-6 and a Lab599 Discovery TX-500.
+i recently decided it was time to get an upgrade. i think i have done enough experimenting with the cheap stuff and i figured it is time to make an investment into some equipment that i will actually use out in the field. while i don't mind having some baofengs lying around in case i need them, i want something that is going to last. i ended up buying a yaesu vx-6 and a lab599 discovery tx-500.
 
-I'm sure a number of people would question the TX-500 purchase, but I like that it is light-weight and compact enough to throw in a go bag. That, and I love the design. It reminds me of the SDR-STK I saw a while back, only it isn't dual/trunked and it has a display. Speaking of which, I really do wish they would release the files for the SDR-STK case so I could try to get one (or more) made since they don't seem to be selling them any longer.
+i'm sure a number of people would question the tx-500 purchase, but i like that it is light-weight and compact enough to throw in a go bag. that, and i love the design. it reminds me of the sdr-stk i saw a while back, only it isn't dual/trunked and it has a display. speaking of which, i really do wish they would release the files for the sdr-stk case so i could try to get one (or more) made since they don't seem to be selling them any longer.
 
-In other news, I recently heard that one of the local radio club members passed away earlier this month. He was my first and only contact thus far, so it kinda sucks. This is right after my father passed away as well.
+in other news, i recently heard that one of the local radio club members passed away earlier this month. he was my first and only contact thus far, so it kinda sucks. this is right after my father passed away as well.
 
-Well, the next step in my journey is to get my general license. I'm hoping to get that done pretty soon here so I can start testing on HF. I wouldn't mind trying out POTA/SOTA activations for a few reasons, but primarily to have an excuse to get out of the house and get my mind off of work. I could use the exercise and sunlight as well, hehe.
+well, the next step in my journey is to get my general license. i'm hoping to get that done pretty soon here so i can start testing on hf. i wouldn't mind trying out pota/sota activations for a few reasons, but primarily to have an excuse to get out of the house and get my mind off of work. i could use the exercise and sunlight as well, hehe.
 
 ### // eof >
 
-That's it for now.
+that's it for now.
 
 - an0malous
